This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

31-Dec-2004 (Lars Duening)  (3.3.642)
  - (lex.c) Factored the handling of preprocessor statements and of
        closures out of the yylex switch.

29-Dec-2004 (Lars Duening)  (3.3.641)
  - (closure, object.c) The driver internally now uses the closure creation
        functions as well - there were more places where lambdas were
        initialized by hand than I expected to be.
  - (closure.c) The location determination for closures didn't check
        carefully enough if the pc was correct or not.

28-Dec-2004 (Lars Duening)  (3.3.640)
  - (pkg-mysql.c) Most mySQL efuns are now privileged as ("mysql", "<efun
        name>") (Bug #0000318).
  - (pkg-pgsql.c) All Postgres efuns are now privileged as ("pgsql", "<efun
        name>").

28-Dec-2004 (Lars Duening)  (3.3.639)
  - (interpret) inter_pc is now always visible, as it's needed by the
        closure origination tracking.
  - (closure) Added functions to create basic closure types, primarily
        so that other closure creators (like FinalFrontier's stringcompiler)
        don't have to do it by hand (and break with every change to the
        closure structure).

27-Dec-2004 (Lars Duening)  (3.3.638)
  - (mudlib/sys/tls.h) Corrected (Bug #0000331)
  - (doc/efun/m_values) Explained the lack of predictable order in the result
        (Bug #0000329)
  - (closure, gcollect.c, interpret.c) Non-operator/efun/sefun closures now
        keep a reference to the program location where they are created, for
        more informative printing (error messages and otherwise).

23-Dec-2004 (Lars Duening)  (3.3.637)
  - (comm.c, sys/input_to.h) The input_to() flag INPUT_APPEND allows
        to queue input_to()s (suggested by Volker Behr).

23-Dec-2004 (Lars Duening)  (3.3.636)
  - (lex, efuns.c) Another small correction to the number parsing in to_int():