@@ -54,16 +54,18 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 642)
-(Parent-Version lpmud 3-3 641)
+(Project-Version lpmud 3-3 643)
+(Parent-Version lpmud 3-3 642)
 (Version-Log "
-  - (lex.c) Factored the handling of preprocessor statements and of
-        closures out of the yylex switch.
+  - (mapping.c) Corrected the hashing function so that for efun/sefun/operator
+        closures the object information is no longer part of the hash. Without
+        that, mappings treat closure keys differently than the '=='/'!='
+        operators, which is not a good thing.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Fri, 31 Dec 2004 12:07:17 -0700")
+(Checkin-Time "Fri, 31 Dec 2004 13:00:52 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -101,8 +103,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.84 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.705 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.385.1.4 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.706 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.385.1.5 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -198,7 +200,7 @@
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.67 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.81 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.82 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
   (src/md5.c (lpmud/l/19_md5.c 1.7 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
